2014-11-26 08:29 +0000
   - changed default page text

2014-11-26 08:10 +0000
   - added default character encoding (utf-8)

2014-11-23 23:13 +0000
   - added xml extension to cache files
   - added config var for cache vacuum time check
   - added changelog

2014-11-23 21:59 +0000
   - initial commit